--- a/src/index.css
+++ b/src/index.css
@@ -78,5 +78,9 @@ nav a.active{
 .mytransition{
     transition: transform .6s ease;
 }
+.fade-out{
+    opacity: 0;
+    transition: opacity 1s ease;
+}
 
 
